fix: increase hover state contrast

--- a/css/post.css
+++ b/css/post.css
@@ -231,7 +231,7 @@ figcaption {
     color 200ms;
 
   &:hover {
-    background: light-dark(var(--color-primary-100), var(--color-primary-500));
+    background: light-dark(var(--color-primary-100), var(--color-primary-600));
   }
 }
 
